lib/components/fabro-llm/tests/it/wire/snapshots/it__wire__openai_compatible__system_and_tools_decode.snap
---
source: lib/components/fabro-llm/tests/it/wire/openai_compatible.rs
expression: rendered
---
{
  "id": "chatcmpl_test",
  "model": "test-model",
  "provider": "openai-compatible",
  "message": {
    "role": "assistant",
    "content": [
      {
        "kind": "text",
        "data": "Hello back"
      }
    ]
  },
  "finish_reason": "stop",
  "usage": {
    "input_tokens": 42,
    "output_tokens": 7,
    "reasoning_tokens": 0,
    "cache_read_tokens": 0,
    "cache_write_tokens": 0
  },
  "raw": {
    "id": "chatcmpl_test",
    "object": "chat.completion",
    "created": 1700000000,
    "model": "test-model",
    "choices": [
      {
        "index": 0,
        "message": {
          "role": "assistant",
          "content": "Hello back"
        },
        "finish_reason": "stop"
      }
    ],
    "usage": {
      "prompt_tokens": 42,
      "completion_tokens": 7,
      "total_tokens": 49
    }
  },
  "warnings": [],
  "rate_limit": null
}
